# auto_trade_V2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHAT_HISTORY.md  COMMANDS_KO.md  DISCORD_USAGE_KO.md  FINAL_0_OUTPUT.md  FINAL_1_OUTPUT.md  FINAL_PRODUCTION_AUDIT_REPORT_2026-02-14_05-47.md  OPS_BUDGET.md  README.md  RUNBOOK.md  TESTING.md  TRADING_SYSTEM_MASTER_DOCUMENTATION.md  USAGE_KO.md  pyproject.toml  pytest.ini  requirements-dev.txt
apps/: run_all.py
apps/discord_bot/: bot.py  client.py  config.py  ui_labels.py
apps/trader_engine/: config.py  logging_setup.py  main.py  scheduler.py
archive/: README.md
auto_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/ops/: backup_restore.md  single_instance_policy.md  verification_runbook.md
local_backtest/: __init__.py  run_local_backtest.sh
output/: README.md
output/jupyter-notebook/: alpha-expansion-sweep-20260311.ipynb
output/research/: alpha_expansion_phase15_20260311.md  alpha_expansion_phase1_20260311.md  alpha_expansion_phase25_exit_validation_20260311.json  alpha_expansion_phase25_exit_validation_20260311.md  alpha_expansion_phase2_exit_validation_20260311.json  alpha_expansion_phase2_exit_validation_20260311.md  alpha_expansion_slice_validation_20260311.json  alpha_expansion_slice_validation_20260311.md  alpha_expansion_threshold_center_validation_20260311.json  alpha_expansion_threshold_center_validation_20260311.md  ebc_multitimeframe_research_20260402.md  ebc_v1_continuation_scaffold_20260402.py  long_delayed_continuation_20260402.md  long_delayed_continuation_scaffold_20260402.py  ops_hardening_diagnosis_20260312.md
output/security/: auto-trader-threat-model-checkin-20260311.md
research/: registry.yaml
research/templates/: experiment_template.md
scripts/: backup_db.py  smoke_test_mode.py  verify_release.py
shared/utils/: dt.py  retry.py
tests/: __init__.py  conftest.py  test_ai_service.py  test_decision_service.py  test_engine_service.py  test_execution_service.py  test_execution_tactics.py  test_oplog.py  test_repos.py  test_risk_service.py  test_sizing_service_legacy.py  test_user_stream_service.py  test_watchdog_service.py
tests/e2e/: test_smoke_dry_run.py
tests/fixtures/: __init__.py  (+3 more)
v2/: AGENTS.md  README.md  run.py
(+348 files in other folders)
